Added deleteById method
